--- a/.github/workflows/update-deepgram-sdk.yaml
+++ b/.github/workflows/update-deepgram-sdk.yaml
@@ -40,6 +40,8 @@ jobs:
 
           if [ "$LATEST_VERSION" != "$INSTALLED_VERSION" ]; then
             echo "Updating Deepgram SDK from $INSTALLED_VERSION to $LATEST_VERSION"
+            git checkout -b update-deepgram-sdk
+
             go get github.com/deepgram/deepgram-go-sdk@$LATEST_VERSION
             
             # Update go.mod and go.sum
@@ -53,7 +55,15 @@ jobs:
               echo "No changes to commit"
             else
               git commit -m "chore: update Deepgram SDK to $LATEST_VERSION"
-              git push
+              git push origin update-deepgram-sdk
+              
+              # Create a pull request
+              PR_URL=$(curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                -H "Accept: application/vnd.github.v3+json" \
+                https://api.github.com/repos/${{ github.repository }}/pulls \
+                -d '{"title":"chore: update Deepgram SDK to '"$LATEST_VERSION"'","head":"update-deepgram-sdk","base":"main"}' \
+                | jq -r '.html_url')
+              echo "Pull request created: $PR_URL"
             fi
           else
             echo "Deepgram SDK is up to date"
