--- a/.github/workflows/update-deepgram-sdk.yaml
+++ b/.github/workflows/update-deepgram-sdk.yaml
@@ -56,17 +56,25 @@ jobs:
             else
               git commit -m "chore: update Deepgram SDK to $LATEST_VERSION"
               git push origin update-deepgram-sdk
-              
-              # Create a pull request
-              PR_URL=$(curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                -H "Accept: application/vnd.github.v3+json" \
-                https://api.github.com/repos/${{ github.repository }}/pulls \
-                -d '{"title":"chore: update Deepgram SDK to '"$LATEST_VERSION"'","head":"update-deepgram-sdk","base":"main"}' \
-                | jq -r '.html_url')
-              echo "Pull request created: $PR_URL"
             fi
           else
             echo "Deepgram SDK is up to date"
+          fi
+
+      - name: Create pull request
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PR_URL=$(curl -s -X POST -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/pulls \
+            -d "{\"title\":\"chore: update Deepgram SDK to $LATEST_VERSION\",\"head\":\"update-deepgram-sdk\",\"base\":\"main\"}" \
+            | jq -r '.html_url')
+          if [ "$PR_URL" = "null" ]; then
+            echo "Pull request creation failed"
+            exit 1
+          else
+            echo "Pull request created: $PR_URL"
           fi
 
       - name: Install dependencies
