--- a/deepgram.toml
+++ b/deepgram.toml
@@ -1,5 +1,5 @@
 [meta]
-  title = "Live Transcription Go Starter"
+  title = "Go Live Transcription Starter"
   description = "Basic demo for using Deepgram to transcribe microphone audio in Go"
   author = "Deepgram DX Team <devrel@deepgram.com> (https://developers.deepgram.com)"
   useCase = "Live"
