--- a/deepgram.toml
+++ b/deepgram.toml
@@ -1,6 +1,6 @@
 [meta]
   title = "Go Live Transcription Starter"
-  description = "Basic demo for using Deepgram to transcribe microphone audio in Go"
+  description = "Get started using Deepgram's Live Transcription with this Go demo app"
   author = "Deepgram DX Team <devrel@deepgram.com> (https://developers.deepgram.com)"
   useCase = "Live"
   language = "Go"
