--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 # dotenv environment variables file
 .env
+
+# Go binary
+go-live-transcription
+server
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Frontend build artifacts
+frontend/dist/
+frontend/node_modules/
